[tool.poetry]
name = "ufs"
version = "0.3.2"
description = "Python Universal File System (UFS)"
authors = ["Daniel J. B. Clarke <danieljbclarkemssm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = {version = "^3.0.0", optional = true}
fsspec = {version = "^2023.10.0", optional = true}
fusepy = {version = "^3.0.1", optional = true}
gunicorn = {version = "^21.2.0", optional = true}
paramiko = {version = "^3.3.1", optional = true}
pyftpdlib = {version = "^1.5.9", optional = true}
s3fs = {version = "^2023.10.0", optional = true}
requests = {version = "^2.31.0", optional = true}


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-timeout = "^2.2.0"
pytest-asyncio = "^0.21.1"

[tool.poetry.extras]
complete = [
  "flask",
  "fsspec",
  "fusepy",
  "gunicorn",
  "paramiko",
  "pyftpdlib",
  "requests",
  "s3fs"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
