[tool.poetry]
name = "ufs"
version = "0.6.0"
description = "Python Universal File System (UFS)"
authors = ["Daniel J. B. Clarke <danieljbclarkemssm@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flask = {version = "^3.0.0", optional = true}
fsspec = {version = "^2023.10.0", optional = true}
fusepy = {version = "^3.0.1", optional = true}
gunicorn = {version = "^21.2.0", optional = true}
paramiko = {version = "^3.3.1", optional = true}
pyftpdlib = {version = "^1.5.9", optional = true}
s3fs = {version = "^2023.10.0", optional = true}
requests = {version = "^2.31.0", optional = true}
minio = {version = "^7.2.15", optional = true, python = ">=3.9,<4.0"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-timeout = "^2.2.0"
pytest-asyncio = "^0.21.1"
pytest-cov = {version = "^6.2.1", python = ">=3.9,<4.0"}
numpy = {version = "<2.3", python = ">=3.9"}
h5py = {version = "^3.14.0", python = ">=3.9"}

[tool.poetry.extras]
complete = [
  "flask",
  "fsspec",
  "fusepy",
  "gunicorn",
  "paramiko",
  "pyftpdlib",
  "requests",
  "s3fs",
  "minio"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
