[pbr]
skip_authors = true
skip_changelog = true
skip_reno = true

[metadata]
name = ufs
author = Daniel J. B. Clarke
author-email = danieljbclarke@gmail.com
summary = A simplified universal file system implementation compatible with others
description-file = README.md
description-content-type = text/markdown; charset=UTF-8
classifier =
  Development Status :: 4 - Beta
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.10
keywords =
  file
  filesystem
  path
  cloud
  storage

[files]
packages =
  ufs

[extras]
testing =
  pytest
  pytest-timeout
complete =
  anyio
  flask
  fsspec
  fusepy
  gunicorn
  paramiko
  pyftpdlib
  requests
  s3fs